<resources>

    <string name="app_name">School.edu Diary</string>
    <string name="week_spinner_title">Wybierz tydzień</string>
    <string name="year_list_title">Wybierz rok</string>
    <string name="weekCombo">Tydzień:</string>
    <string name="LOGIN_FAILURE_WINDOW_HEADER">Login</string>
    <string name="MONDAY_SHORT">Po</string>
    <string name="TUESDAY_SHORT">Wt</string>
    <string name="WEDNESDAY_SHORT">Sr</string>
    <string name="THURSDAY_SHORT">Cz</string>
    <string name="FRIDAY_SHORT">Pt</string>
    <string name="SATURDAY_SHORT">So</string>
    <string name="NO_SCHEDULE_FOUND">Plan został nie znaleziony</string>
    <string name="NO_SCHEDULE_MSG">Plan zajęć dla wybranego tygodnia nie znaleziono.</string>
    <string name="SERVER_UNAVAILABLE_MSG">Serwer tymczasowo nie pracuje. Spróbuj ponownie później.</string>
    <string name="CANNOT_READ_SERVER_RESPONSE_MSG">Błąd odpowiedźi serwera. Spróbuj ponownie później.</string>
    <string name="ERROR_READING_JSON_RESPONSE_MSG">Błąd odpowiedźi serwera. Spróbuj ponownie później.</string>
    <string name="NO_CHILDREN_FOR_PARENT_MSG">Na koncie systemy nie ma zadnego ucznia.</string>
    <string name="MESSAGE_NOT_ALL_FIELDS_FILLED">Proszę wypełnić wszystkie pola.</string>
    <string name="PASSWORD_FIELD_LABEL">Hasło</string>
    <string name="LOGIN_FIELD_LABEL">Login</string>
    <string name="HOME_TASK_WINDOW_TITLE">Praca domowa</string>
    <string name="FOOTER_DAY_CHANGE_LABEL">Zmiana dnia</string>
    <string name="FOOTER_WARNING_LABEL">Uwaga</string>
    <string name="FOOTER_HOME_TASK_LABEL">Pr. domowa</string>
    <string name="CHOOSE_CHILD_FOOTER_LABEL">Wybierz dziecko</string>
    <string name="SETTINGS_LOGOUT_LABEL">Wyloguj</string>
    <string name="ERROR_DIALOG_DEFAULT_TITLE">Błąd</string>
    <string name="LOGIN_PROGRESS_BAR_MESSAGE">Zaloguj się...</string>
    <string name="REMEMBER_ME_LABEL">Zapamiętaj</string>
    <string name="LOADING_PROGRESS_BAR_MESSAGE">Ładowanie...</string>
    <string name="NAME_MIDDLE_NAME_FIELD_LABEL">Twoje imię, nazwisko rodowe</string>
    <string name="SURNAME_FIELD_LABEL">Twoje nazwisko</string>
    <string name="PUPIL_NAME_MIDDLE_NAME_FIELD_LABEL">Imię, nazwisko rodowe studenta</string>
    <string name="PUPIL_SURNAME_FIELD_LABEL">Nazwisko studenta</string>
    <string name="PUPIL_BIRTH_DATE_LABEL">Data urodzenia ucznia</string>
    <string name="SCHOOL_CITY_FIELD_LABEL">Miasto twojej szkoły</string>
    <string name="SCHOOL_CITY_SPINNER_TITLE">Wybierz szkole</string>
    <string name="SCHOOL_FIELD_LABEL">Numer szkoły</string>
    <string name="PUPIL_CLASS_FIELD_LABEL">Klasa ucznia</string>
    <string name="PUPIL_CLASS_SPINNER_TITLE">Wybierz klasę ucznia</string>
    <string name="EMAIL_ADDRESS_FIELD_LABEL">Adres e-mail</string>
    <string name="ADDRESS_FIELD_LABEL">Adres</string>
    <string name="REGISTER_BUTTON_LABEL">Ty nie jesteś z nami? Zarejestruj się tutaj.</string>
    <string name="PHONE_NUMBER_FIELD_LABEL">Kontaktowy numer telefonu</string>
    <string name="TITLE_REGISTRATION_MESSAGE_SENT">Rejestracja jest udana.</string>
    <string name="MESSAGE_REGISTRATION_MESSAGE_SENT">Na twój email został wysłany list aktywacyjny. Musisz aktywować żądanie, klikając link w mailu.</string>
    <string name="TITLE_REGISTRATION_MESSAGE_FAILURE">Błąd wysyłania</string>
    <string name="MESSAGE_REGISTRATION_MESSAGE_FAILURE">Formularz rejestracyjny nie został wysłany. Spróbuj później ponownie.</string>
    <string name="SEND_REGISTRATION_FORM_BUTTON_LABEL">Wysłać</string>
    <string name="ACCEPT_RULES_BUTTON_LABEL">Akceptuję</string>
    <string name="DECLINE_RULES_BUTTON_LABEL">Nie akceptuję</string>
    <string name="RULES_DIALOG_TITLE">Zasady użytkowania</string>
    <string name="TITLE_RULES_REJECTED">Rejestracja anulowana</string>
    <string name="MESSAGE_RULES_REJECTED">Musisz zgodzić się z regułami, aby zarejestrować się w systemie.</string>

    <string name="ERROR_ONLY_NUMERIC_DIGITS_ALLOWED">Pola tylko dla numerów</string>
    <string name="ERROR_THIS_FIELD_CANNOT_CONTAIN_SPECIAL_CHARACTER">Pole nie może zawierać znaków specjalnych</string>
    <string name="ERROR_ONLY_STANDARD_LETTERS_ARE_ALLOWED">Pole tylko do tekstu</string>
    <string name="ERROR_FIELD_MUST_NOT_BE_EMPTY">Pole nie może być puste</string>
    <string name="ERROR_EMAIL_ADDRESS_NOT_VALID">Nieprawidłowy format e-mail</string>
    <string name="ERROR_CREDITCARD_NUMBER_NOT_VALID">Błędny format numeru karty kredytowej</string>
    <string name="ERROR_PHONE_NOT_VALID">Nieprawidłowy format numeru telefonu</string>
    <string name="ERROR_DOMAIN_NOT_VALID">Nieprawidłowy format domeną</string>
    <string name="ERROR_IP_NOT_VALID">Niepoprawny format IP adresy</string>
    <string name="ERROR_URL_NOT_VALID">Niepoprawny format WEB adresy</string>
    <string name="ERROR_DATE_NOT_VALID">Data w niewłaściwym formacie</string>

</resources>