<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/list_background" >

    <include
        android:id="@+id/header_ref"
        layout="@layout/header_with_logo" />

    <!-- Login Form -->

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header_ref"
        android:orientation="vertical"
        android:padding="10dp" >

        <!-- Email Label -->

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/LOGIN_FIELD_LABEL"
            android:textColor="@color/dark_blue" />

        <EditText
            android:id="@+id/login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:layout_marginTop="5dip"
            android:inputType="text"
            android:singleLine="true"
            android:textColor="@color/dark_blue" />
        <!-- Password Label -->

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/PASSWORD_FIELD_LABEL"
            android:textColor="@color/dark_blue" />

        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@color/dark_blue" />
        <!-- Login button -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip" >

            <CheckBox
                android:id="@+id/rememberMe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:checked="true"
                android:text="@string/REMEMBER_ME_LABEL"
                android:textColor="@color/dark_blue" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="10dip"
                android:layout_weight="0.2"
                android:onClick="onLogin"
                android:text="@string/LOGIN_FIELD_LABEL"
                android:textColor="@color/dark_blue" />
        </LinearLayout>

        <TextView
            android:id="@+id/link_to_register"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:gravity="center"
            android:text="@string/REGISTER_BUTTON_LABEL"
            android:textColor="@color/dark_blue"
            android:textSize="17sp"
            android:clickable="true"
            android:onClick="showRegistrationForm" />
    </LinearLayout>
    <!-- Login Form Ends -->

</RelativeLayout>