<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:gravity="center" >

    <!-- Header Starts -->

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/header_back"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/peopleIcon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="3dp"
                android:contentDescription="peopleIcon"
                android:src="@drawable/people" />

            <TextView
                android:id="@+id/pupilName"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="3dp"
                android:layout_weight="0.7"
                android:text="Бресьлавский Владислав"
                android:textColor="@color/text_dark"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/pupilClass"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="10dp"
                android:layout_marginTop="3dp"
                android:layout_weight="0.1"
                android:gravity="right"
                android:text="12a"
                android:textColor="@color/text_dark"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/weekComboLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_weight="0.13"
                android:text="@string/weekCombo"
                android:textColor="@color/text_dark"
                android:textSize="10sp"
                android:textStyle="bold" />

            <include
                android:id="@+id/weekSelection"
                android:layout_width="80dp"
                android:layout_height="28dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.5"
                layout="@layout/diary_combo" />

            <include
                android:id="@+id/yearSelection"
                android:layout_width="20dp"
                android:layout_height="28dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.5"
                layout="@layout/diary_combo" />

            <TextView
                android:id="@+id/dayOfWeek"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="10dp"
                android:layout_weight="0.4"
                android:gravity="right"
                android:text="Пн, 04.12.2013"
                android:textColor="@color/text_dark"
                android:textSize="10sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <ListView
        android:id="@+id/daySchedule"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/footer"
        android:layout_below="@+id/header"
        android:layout_centerHorizontal="true"
        android:background="@drawable/list_background"
        android:cacheColorHint="#00000000"
        android:clickable="false"
        android:listSelector="@android:color/transparent" >
    </ListView>

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/footer_back"
        android:baselineAligned="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="5dip" >

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="2dp"
            android:layout_weight="0.1"
            android:contentDescription="homeworkIcon"
            android:src="@drawable/footer_homework" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_weight="0.23"
            android:text="@string/FOOTER_HOME_TASK_LABEL"
            android:textColor="@color/text_dark"
            android:textSize="10dp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="0.1"
            android:contentDescription="warningIcon"
            android:src="@drawable/footer_warning" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_weight="0.23"
            android:text="@string/FOOTER_WARNING_LABEL"
            android:textColor="@color/text_dark"
            android:textSize="10dp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="29dp"
            android:layout_height="20dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="0.1"
            android:contentDescription="warningIcon"
            android:src="@drawable/footer_arrows" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="0.23"
            android:text="@string/FOOTER_DAY_CHANGE_LABEL"
            android:textColor="@color/text_dark"
            android:textSize="10dp"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>